QOL(toggles): button colors

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "synergism",
-  "version": "1.008-beta1",
+  "version": "1.008.1",
   "description": "",
   "main": "index.js",
   "dependencies": {},
